# RustyFilesort

./: .gitignore  Cargo.toml  README.md  build.rs  license.txt
src/: lib.rs  main.rs
src/application/: iced_application.rs  mod.rs  settings.rs
src/auto_start/: auto_start_agent.rs  mod.rs
src/errors/: custom_errors.rs
src/sorting/: filesort.rs  mod.rs
src/tests/: custom_tests.rs  mod.rs
src/tray/: application_tray.rs  mod.rs
