[package]
name = "RustyFilesort"
version = "0.1.1"
edition = "2021"
github = "lowpolycat1"
authors = ["Julian Tepper <juliantepper2006+github@gmail.com>"]
description = ""
license_file = "./license.txt"
repository = "https://github.com/LowPolyCat1/autosort_downloads"
publish = false

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
dirs = { version = "5.0.1" }
thiserror = { version = "2.0.9" }


[build-dependencies]
windows_exe_info = "0.4.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
rpath = false
