[package]
name = "rusty_filesort"
version = "0.2.0"
edition = "2021"
github = "lowpolycat1"
authors = ["Julian Tepper <juliantepper2006+github@gmail.com>"]
description = ""
license_file = "./license.txt"
repository = "https://github.com/LowPolyCat1/RustyFilesort"
publish = false

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
dirs = { version = "5.0.1" }
thiserror = { version = "2.0.9" }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"


[build-dependencies]
windows_exe_info = "0.4.2"


[dev-dependencies]
tempfile = "3.15.0"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
rpath = false
